@@ -1,4 +1,5 @@
 Changes in version 0.0.5 - UNRELEASED:
+ * Bug 21764: Use bubblewrap's `--die-with-parent` when supported.
  * Fix e10s Web Content crash on systems with grsec kernels.
  * Add `prlimit64` to the firefox system call whitelist.
 
